--- a/src/main/resources/com/example/medicineservices/basketPane.fxml
+++ b/src/main/resources/com/example/medicineservices/basketPane.fxml
@@ -21,28 +21,28 @@
                 </TableView>
                 <Button fx:id="del" layoutX="584.0" layoutY="84.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="148.0" text="Удалить из корзины" />
                 <Button fx:id="priceCalculator" layoutX="584.0" layoutY="21.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="148.0" text="Подсчитать стоимость" />
-            <Text layoutX="73.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Выбранные услуги">
+            <Text layoutX="43.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Выбранные услуги">
                <font>
-                  <Font name="Times New Roman" size="28.0" />
+                  <Font name="Times New Roman" size="32.0" />
                </font>
             </Text>
-            <Text layoutX="311.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="К оплате:">
+            <Text layoutX="311.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="К оплате:">
                <font>
-                  <Font name="Times New Roman" size="18.0" />
+                  <Font name="Times New Roman" size="24.0" />
                </font>
             </Text>
-            <Text fx:id="priceAll" layoutX="394.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="122.71997070312494">
+            <Text fx:id="priceAll" layoutX="416.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="122.71997070312494">
                <font>
                   <Font name="Times New Roman" size="18.0" />
                </font>
             </Text>
             <Button fx:id="addBalance" layoutX="584.0" layoutY="147.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="148.0" text="Пополнить баланс" />
-            <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Баланс:">
+            <Text layoutX="14.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Баланс:">
                <font>
-                  <Font name="Times New Roman" size="18.0" />
+                  <Font name="Times New Roman" size="24.0" />
                </font>
             </Text>
-            <Text fx:id="balance" layoutX="80.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0">
+            <Text fx:id="balance" layoutX="99.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="86.39996337890625">
                <font>
                   <Font name="Times New Roman" size="18.0" />
                </font>
