--- a/src/main/resources/com/example/medicineservices/adminPane.fxml
+++ b/src/main/resources/com/example/medicineservices/adminPane.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -6,6 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.medicineservices.AdminPaneController">
     <children>
         <Pane layoutX="-2.0" layoutY="1.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #40E0D0;">
@@ -44,7 +46,8 @@
             <Button fx:id="delService" layoutX="308.0" layoutY="76.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="87.0" text="Удалить" />
             <Button fx:id="addService" layoutX="409.0" layoutY="76.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="87.0" text="Добавить" />
             <Button fx:id="updateService" layoutX="506.0" layoutY="76.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="87.0" text="Изменить" />
-            <Button fx:id="refresh" layoutX="506.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="87.0" text="Обновить" />
+            <Button fx:id="refresh" layoutX="264.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="87.0" text="Обновить" />
+            <Button fx:id="doctors" layoutX="500.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="99.0" text="Медперсонал" />
          </children>
         </Pane>
     </children>
